<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapse"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/marginStart"
                    android:layout_marginTop="@dimen/marginTop"
                    android:layout_marginEnd="@dimen/marginEnd"
                    android:layout_marginBottom="@dimen/marginBottomContent"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="kilk">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/marginTop">

                        <TextView
                            android:id="@+id/tv_aboutUs"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/marginBottomContent"
                            android:drawablePadding="@dimen/marginTop"
                            android:text="@string/about_us"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_desc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tv_aboutUs"
                            android:ellipsize="end"
                            android:maxLines="4"
                            android:text="@string/about" />

                        <TextView
                            android:id="@+id/tv_more"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tv_desc"
                            android:layout_alignParentEnd="true"
                            android:layout_marginBottom="@dimen/marginBottomContent"
                            android:drawablePadding="@dimen/marginTop"
                            android:text="@string/more"
                            android:textStyle="bold" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/marginStart"
                    android:layout_marginTop="@dimen/marginTop"
                    android:layout_marginEnd="@dimen/marginEnd"
                    android:layout_marginBottom="@dimen/marginBottomContent">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/marginTop">

                        <TextView
                            android:id="@+id/tv_contactUs"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/marginBottomContent"
                            android:drawablePadding="@dimen/marginTop"
                            android:text="@string/contact_us"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_address"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tv_contactUs"
                            android:layout_marginBottom="@dimen/MarginInnerContent"
                            android:drawableStart="@drawable/ic_location_city"
                            android:drawablePadding="@dimen/marginTop"
                            android:text="@string/address" />

                        <TextView
                            android:id="@+id/tv_contact"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tv_address"
                            android:layout_marginBottom="@dimen/MarginInnerContent"
                            android:drawableStart="@drawable/ic_call"
                            android:drawablePadding="@dimen/marginTop"
                            android:text="@string/contact" />

                        <TextView
                            android:id="@+id/tv_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tv_contact"
                            android:layout_marginBottom="@dimen/MarginInnerContent"
                            android:drawableStart="@drawable/ic_email"
                            android:drawablePadding="@dimen/marginTop"
                            android:text="@string/email" />

                        <TextView
                            android:id="@+id/tv_website"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tv_email"
                            android:layout_marginBottom="@dimen/MarginInnerContent"
                            android:drawableStart="@drawable/ic_web"
                            android:drawablePadding="@dimen/marginTop"
                            android:text="@string/website" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="@dimen/marginTop"
                android:layout_marginEnd="50dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/fb_logo"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="@dimen/marginTop"
                    android:layout_weight="1"
                    android:onClick="fbClick"
                    android:scaleType="centerInside"
                    android:src="@drawable/fb_logo" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ig_logo"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="@dimen/marginTop"
                    android:layout_weight="1"
                    android:foregroundGravity=""
                    android:onClick="igCkick"
                    android:scaleType="centerInside"
                    android:src="@drawable/ig_logo" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/yt_logo"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="@dimen/marginTop"
                    android:layout_weight="1"
                    android:onClick="ytClick"
                    android:scaleType="centerInside"
                    android:src="@drawable/yt_logo" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>